# algorithms

./: .clang-format  .gitignore  CLAUDE.md  CMakeLists.txt  Readme.md  run.sh  run_lldb.sh
ds/: LinkedList.h  Node.h  PrefixTree.cpp  PrefixTree.h  SegmentTree.cpp  SegmentTree.h  UnionFind.cpp  UnionFind.h  WordDictionary.cpp  WordDictionary.h  WordFilter.cpp  WordFilter.h
include/: _test_utils.h  accounts_merge.h  connected_components.h  contains_duplicates_two.h  find_duplicate_number.h  linked_list_problem.h  longest_consecutive_sequence.h  longest_repeating_char_replacement.h  max_cont_char_w_repeating.h  max_subarray.h  max_water.h  min_sub_array_len.h  my_calendar_one.h  number_of_subarrays_size_k_avg_gt_eq_thr.h  palindrome.h  prefix_sum.h  prefix_tree_problems.h  range_num_query.h  redundant_connection.h  remove_duplicates_in_place.h  two_sum_two.h
src/: accounts_merge.cpp  connected_components.cpp  contains_duplicates_two.cpp  find_duplicate_number.cpp  linked_list_problem.cpp  longest_consecutive_sequence.cpp  longest_repeating_char_replacement.cpp  max_cont_char_w_repeating.cpp  max_subarray.cpp  max_water.cpp  min_sub_array_len.cpp  my_calendar_one.cpp  number_of_subarrays_size_k_avg_gt_eq_thr.cpp  palindrome.cpp  prefix_sum.cpp  prefix_tree_problems.cpp  range_num_query.cpp  redundant_connection.cpp  remove_duplicates_in_place.cpp  two_sum_two.cpp
tests/: test_accounts_merge.cpp  test_connected_components.cpp  test_contains_duplicates_two.cpp  test_find_duplicate_number.cpp  test_linked_list.cpp  test_longest_consecutive_sequence.cpp  test_longest_repeating_char_replacement.cpp  test_max_cont_char_w_repeating.cpp  test_max_subarray.cpp  test_max_water.cpp  test_middle_of_linked_list.cpp  test_min_sub_array_len.cpp  test_my_calendar_one.cpp  test_number_of_subarrays_size_k_avg_gt_eq_thr_test.cpp  test_palindrome.cpp  test_prefix_sum.cpp  test_prefix_tree.cpp  test_range_num_query.cpp  test_redundant_connection.cpp  test_remove_duplicates_in_plcae.cpp  test_segment_tree.cpp  test_two_sum_two.cpp
